cam_view script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,12 @@ install(TARGETS
 coral
 DESTINATION lib/${PROJECT_NAME})
 
+FILE(GLOB SCRIPTS scripts/*.py)
+install(PROGRAMS
+  ${SCRIPTS}
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 if(NOT OSGOCEAN_EXTERNAL)
 install(TARGETS osgOcean
   ARCHIVE DESTINATION lib
