handles odom ground truth topic instead of all tf's

--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,10 @@
   <description>osgOcean-based frontend for marine environments</description>
   <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
   <license>GPL</license>  
+  
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <build_depend>rosidl_default_generators</build_depend>
+  <depend>libopenscenegraph-dev</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
@@ -14,6 +17,10 @@
   <depend>tf2_ros</depend>
   <depend>image_transport</depend>
   <depend>std_srvs</depend>
+  
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  
   <export>
     <build_type>ament_cmake</build_type>
   </export>
