--- a/package.xml
+++ b/package.xml
@@ -9,6 +9,8 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <build_depend>rosidl_default_generators</build_depend>
   <depend>libopenscenegraph-dev</depend>
+  <depend>libfftw3-dev</depend>
+  <depend>libfftw3-3</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
