--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,16 @@ find_package(geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
+if("$ENV{ROS_DISTRO}" STRGREATER "galactic" OR "$ENV{ROS_DISTRO}" STRGREATER "foxy")
+    set(LEGACY_IDL TRUE)
+else()
+    set(LEGACY_IDL FALSE)
+endif()
+
 rosidl_generate_interfaces(${PROJECT_NAME} "srv/Spawn.srv")
+if(NOT ${LEGACY_IDL})
+rosidl_get_typesupport_target(cpp_typesupport_target "${PROJECT_NAME}" "rosidl_typesupport_cpp")
+endif()
 
 set(OSGOCEAN_SRC ${PROJECT_SOURCE_DIR}/osgocean/osgocean)
 
@@ -91,11 +100,19 @@ target_include_directories(coral_sim SYSTEM PRIVATE include ${OPENSCENEGRAPH_INC
 target_include_directories(coral_sim PRIVATE include)
 target_link_libraries(coral_sim osgOcean ${OPENSCENEGRAPH_LIBRARIES} ${OPENGL_LIBRARY})
 ament_target_dependencies(coral_sim rclcpp sensor_msgs geometry_msgs nav_msgs urdf ament_index_cpp tf2_ros image_transport std_srvs)
-rosidl_target_interfaces(coral_sim ${PROJECT_NAME} "rosidl_typesupport_cpp")
+if(${LEGACY_IDL})
+    rosidl_target_interfaces(coral_sim ${PROJECT_NAME} "rosidl_typesupport_cpp")
+else()
+    target_link_libraries(coral_sim "${cpp_typesupport_target}")
+endif()
 
 add_executable(spawn src/spawn.cpp)
 ament_target_dependencies(spawn rclcpp)
-rosidl_target_interfaces(spawn ${PROJECT_NAME} "rosidl_typesupport_cpp")
+if(${LEGACY_IDL})
+    rosidl_target_interfaces(spawn ${PROJECT_NAME} "rosidl_typesupport_cpp")
+else()
+    target_link_libraries(spawn "${cpp_typesupport_target}")
+endif()
 
 
 install(TARGETS 
